Added Taiyou Configuration File
Now you can:
Disable Font Rendering
Disable Sprite Rendering
Disable Rectangle/Shapes Rendering
Disable Sprite Transparencty at all
Disable Sound System

and some minot changes.

--- a/Taiyou.config
+++ b/Taiyou.config
@@ -4,3 +4,5 @@
 DisableFontRendering:False
 DisableSpriteRendering:False
 DisableRectangleRendering:False
+DisableSpriteTransparency:False
+DisableSoundSystem:False
