--- a/Taiyou.config
+++ b/Taiyou.config
@@ -6,3 +6,4 @@ DisableSpriteRendering:False
 DisableRectangleRendering:False
 DisableSpriteTransparency:False
 DisableSoundSystem:False
+AppDataFolder:AppData/
