Added LoadingSquare Animation
A cool loading for Screen

--- a/Taiyou.config
+++ b/Taiyou.config
@@ -1,9 +1,69 @@
 #
 # Taiyou Game Engine Configuration File
-#
+##########################################
 DisableFontRendering:False
 DisableSpriteRendering:False
 DisableRectangleRendering:False
 DisableSpriteTransparency:False
 DisableSoundSystem:False
 AppDataFolder:Taiyou/HOME/AppsData/
+VideoDriver:x11
+AudioDriver:alsa
+DiskAudioFile:output.raw
+DiskAudioDelay:150
+AudioFrequency=96000
+AudioSize=-16
+AudioChannels=2
+AudioBufferSize=500
+#############################################
+# -- Options Avaliable for Video Drivers -- #
+#############################################
+#
+#   Driver          OS Name
+#==========================================
+#   x11             Any
+#   ggi             Any
+#   aalib           Any
+#   dummy           Any
+#   nanox	        Linux
+#   fbcon	        Linux
+#   directfb        Linux
+#   svgalib         Linux
+#   toolbox         MacOS Classic
+#   DSp             MacOS Classic
+#   Quartz          Mac OS X
+#   CGX             Amiga
+#   ps2gs           Playstation 2
+#   bwindow         BeOS
+#   vgl             BSD
+#   dga             XFree86 DGA2
+#   directx         Windows
+#   windib          Windows
+#
+#############################################
+# -- Options Avaliable for Audio Drivers -- #
+#############################################
+#
+#   Driver          OS Name
+#=========================================================
+#   openbsd         OpenBSD
+#   dsp             Linux, Solaris, BSD
+#   alsa            Linux
+#   pulse           Pulse Audio Daemon
+#   audio           SunOS, Solaris
+#   AL              Irix
+#   artsc           ARTS Audio Daemon
+#   esd             esound Audio Daemon
+#   nas             NAS Audio Daemon
+#   dma             OSS /dev/dsp using DMA
+#   dsound          Windows DirectX
+#   waveout         Windows WaveOut
+#   baudio          BeOS
+#   sndmgr          MacOS SoundManager
+#   paud            AIX
+#   AHI             Amiga
+#   disk            Output to File
+#
+#######################################################################################################
+# -- The lists was taken from: https://www.libsdl.org/release/SDL-1.2.15/docs/html/sdlenvvars.html -- #
+#######################################################################################################
