--- a/Taiyou.config
+++ b/Taiyou.config
@@ -15,6 +15,8 @@ AudioFrequency:96000
 AudioSize:-16
 AudioChannels:2
 AudioBufferSize:1500
+RunInFullScreen:False
+AutoBootGameFolder:Fosgoso
 #############################################
 # -- Options Avaliable for Video Drivers -- #
 #############################################
