Finaly fixed the Background on Game Overlay
Now it is working!!!!!!

--- a/Taiyou.config
+++ b/Taiyou.config
@@ -1,30 +1,44 @@
-#
-# Taiyou Game Engine Configuration File
-##########################################
+#############################################################
+#           Taiyou Game Engine Configuration File           #
+#############################################################
+# ---------- Disable Engine Features ---------- #
 DisableFontRendering:False
 DisableSpriteRendering:False
 DisableRectangleRendering:False
 DisableSpriteTransparency:False
 DisableSoundSystem:False
-AppDataFolder:Taiyou/HOME/AppsData/
+
+# ---------- Pygame SDL's Drivers ---------- #
 VideoDriver:x11
+VideoX11_CenterWindow:True
+VideoX11_DGAMouse:True
+VideoX11_YUV_HWACCEL:True
+InputMouseDriver:fbcon
+InputDisableMouse:False
 AudioDriver:alsa
-DiskAudioFile:output.raw
-DiskAudioDelay:150
+
+# ---------- Audio Device Properties ---------- #
 AudioFrequency:96000
 AudioSize:-16
 AudioChannels:2
 AudioBufferSize:1500
+
+# ---------- Misc Options ---------- #
 RunInFullScreen:False
-AutoBootGameFolder:Fosgoso
-#############################################
-# -- Options Avaliable for Video Drivers -- #
-#############################################
-#
-#   Driver          OS Name
-#==========================================
-#   x11             Any
-#   ggi             Any
+#AutoBootGameFolder:Fogoso
+AppDataFolder:Taiyou/HOME/AppsData/
+
+#########################################################
+#        ---------- SDL Video Drivers ----------        #
+#########################################################
+# Since TaiyouGameEngine was made with Pygame           #
+# and Pygame uses SDL, Pygame can use SDL Video Drivers #
+#-------------------------------------------------------#
+#                                                       #
+#   Driver          OS Name                             #
+#====================================================   #
+#   x11             Any                                 #
+#   ggi             Any                                 #
 #   aalib           Any
 #   dummy           Any
 #   nanox	        Linux
@@ -64,7 +78,6 @@ AutoBootGameFolder:Fosgoso
 #   sndmgr          MacOS SoundManager
 #   paud            AIX
 #   AHI             Amiga
-#   disk            Output to File
 #
 #######################################################################################################
 # -- The lists was taken from: https://www.libsdl.org/release/SDL-1.2.15/docs/html/sdlenvvars.html -- #
