Added No Icon to Loading Screen, if no Game Icon was detected

--- a/Taiyou.config
+++ b/Taiyou.config
@@ -25,7 +25,7 @@ AudioBufferSize:1500
 
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
-#AutoBootGameFolder:Fogoso
+AutoBootGameFolder:Fogoso
 AppDataFolder:Taiyou/HOME/AppsData/
 
 #########################################################
