Almost Finished Sound System

--- a/Taiyou.config
+++ b/Taiyou.config
@@ -8,7 +8,7 @@ DisableRectangleRendering:False
 DisableSpriteTransparency:False
 DisableSoundSystem:False
 
-# ---------- Pygame SDL's Drivers ---------- #
+# ---------- Pygame SDL's Settings ---------- #
 VideoDriver:x11
 VideoX11_CenterWindow:True
 VideoX11_DGAMouse:True
