Added Ignore SDL2 Parameter
This is a Workaround to make Taiyou Game Engine run on Windows [haha]

--- a/Taiyou.config
+++ b/Taiyou.config
@@ -27,6 +27,7 @@ AudioBufferSize:1500
 RunInFullScreen:False
 #AutoBootGameFolder:Fogoso
 AppDataFolder:Taiyou/HOME/AppsData/
+IgnoreDriversParameters:True
 
 #########################################################
 #        ---------- SDL Video Drivers ----------        #
