Added new License Screen, Update Volume Slider

--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -25,9 +25,8 @@ AudioBufferSize:1500
 
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
-#AutoBoot:null
-# /\ Setting the value to "null" will make the 
-# loading screen lock.
+#AutoBoot:Fogoso
+# /\ Setting the value to "null" will make the loading screen loading forever.
 AppDataFolder:Taiyou/HOME/AppsData/
 IgnoreDriversParameters:False
 
