Fixed Missing Sprite on Console Window

--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -25,7 +25,7 @@ AudioBufferSize:1500
 
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
-#AutoBoot:Fogoso
+#AutoBoot:null
 # /\ Setting the value to "null" will make the loading screen loading forever.
 AppDataFolder:Taiyou/HOME/AppsData/
 IgnoreDriversParameters:False
@@ -33,7 +33,7 @@ IgnoreDriversParameters:False
 # ---------- Pygame Options ---------- #
 SmoothScaleBackend:MMX 
 FastEvent:True
-  
+
 ############################
 # -- SmoothScaleBackend -- #
 ############################
