Partialy Added BitDepth Option

--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -29,6 +29,7 @@ RunInFullScreen:False
 # /\ Setting the value to "null" will make the loading screen loading forever.
 AppDataFolder:Taiyou/HOME/AppsData/
 IgnoreDriversParameters:False
+BitDepth:16
 
 # ---------- Pygame Options ---------- #
 SmoothScaleBackend:MMX 
