Added Loading Steps Status Text

--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -25,21 +25,23 @@ AudioBufferSize:1500
 
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
-AutoBoot:Fogoso
+#AutoBoot:Fogoso
 # /\ Setting the value to "null" will make the loading screen loading forever.
 AppDataFolder:Taiyou/HOME/AppsData/
 IgnoreDriversParameters:False
-BitDepth:16
+DefaultSystemUIScreen:1
+DefaultOverlayLevel:-1
 
 # ---------- Pygame Options ---------- #
 SmoothScaleBackend:MMX 
 FastEvent:True
 
+
 ############################
 # -- SmoothScaleBackend -- #
 ############################
-#   Option          Test
-#=========================
+#   Option          Tested
+#============================
 #   MMX             Faster     
 #   GENERIC         Slower   
 #   SSE             Medium (betwhen faster and slower)   
@@ -53,12 +55,12 @@ FastEvent:True
 #                         guaranted.                    #
 #-------------------------------------------------------#
 #
-#   Driver          OS Name
+#   Driver          OS
 #==================================================== 
-#   x11             Any                                 
 #   ggi             Any                                 
 #   aalib           Any
 #   dummy           Any
+#   x11             Linux                                 
 #   nanox	        Linux
 #   fbcon	        Linux
 #   directfb        Linux
@@ -75,6 +77,7 @@ FastEvent:True
 #   windib          Windows
 #
 #=== The default option depends on you'r operational system.
+#=== This option can also not working, depending on with Video Driver is installed on you'r computer.
 
 ######################################################### 
 #       -- Options Avaliable for Audio Drivers --       #
