Changed Receive Command Function, Added new Global Dialog

--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -25,12 +25,12 @@ AudioBufferSize:1500
 
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
-AutoBoot:Fogoso
+#AutoBoot:PhisicsTest
 # /\ Setting the value to "null" will make the loading screen loading forever.
 AppDataFolder:Taiyou/HOME/AppsData/
 IgnoreDriversParameters:False
-#DefaultSystemUIScreen:2
-DefaultOverlayLevel:-1
+DefaultSystemUIScreen:1
+#DefaultOverlayLevel:2
 
 # ---------- Pygame Options ---------- #
 SmoothScaleBackend:MMX 
