--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -25,17 +25,19 @@ AudioBufferSize:1500
 
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
-#AutoBoot:PhisicsTest
+#AutoBoot:Fogoso
 # /\ Setting the value to "null" will make the loading screen loading forever.
 AppDataFolder:Taiyou/HOME/AppsData/
 IgnoreDriversParameters:False
-DefaultSystemUIScreen:1
+#DefaultSystemUIScreen:2
 #DefaultOverlayLevel:2
 
 # ---------- Pygame Options ---------- #
 SmoothScaleBackend:MMX 
 FastEvent:True
 
+# ---------- Debug Options ---------- #
+DEBUG_Step:False
 
 ############################
 # -- SmoothScaleBackend -- #
