Added Get Dominant Color

--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -29,7 +29,7 @@ RunInFullScreen:False
 # /\ Setting the value to "null" will make the loading screen loading forever.
 AppDataFolder:Taiyou/HOME/AppsData/
 IgnoreDriversParameters:False
-#DefaultSystemUIScreen:2
+DefaultSystemUIScreen:1
 #DefaultOverlayLevel:2
 
 # ---------- Pygame Options ---------- #
