--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -25,11 +25,11 @@ AudioBufferSize:1500
 
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
-AutoBoot:Fogoso
+#AutoBoot:Fogoso
 # /\ Setting the value to "null" will make the loading screen loading forever.
 AppDataFolder:Taiyou/HOME/AppsData/
 IgnoreDriversParameters:False
-#DefaultSystemUIScreen:2
+DefaultSystemUIScreen:1
 #DefaultOverlayLevel:2
 
 # ---------- Pygame Options ---------- #
