Changed NotificationUI to MainTaiyouUI Update

--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -35,10 +35,7 @@ DefaultSystemUIScreen:1
 # ---------- Pygame Options ---------- #
 SmoothScaleBackend:MMX 
 FastEvent:True
-
-# ---------- Debug Options ---------- #
-DEBUG_Step:False
-
+ 
 ############################
 # -- SmoothScaleBackend -- #
 ############################
@@ -79,7 +76,7 @@ DEBUG_Step:False
 #   windib          Windows
 #
 #=== The default option depends on you'r operational system.
-#=== This option can also not working, depending on with Video Driver is installed on you'r computer.
+#=== This option can also not working, depending on wich Video Driver is installed on you'r computer.
 
 ######################################################### 
 #       -- Options Avaliable for Audio Drivers --       #
