Created Animation Controller Object

--- a/Taiyou/SYSTEM/Taiyou.config
+++ b/Taiyou/SYSTEM/Taiyou.config
@@ -30,7 +30,7 @@ RunInFullScreen:False
 AppDataFolder:Taiyou/HOME/AppsData/
 IgnoreDriversParameters:False
 DefaultSystemUIScreen:1
-#DefaultOverlayLevel:2
+DefaultOverlayLevel:2
 
 # ---------- Pygame Options ---------- #
 SmoothScaleBackend:MMX 
