Fixed a but of Taiyou Game Engine not working on Windows.

--- a/Taiyou/Taiyou.config
+++ b/Taiyou/Taiyou.config
@@ -25,15 +25,11 @@ AudioBufferSize:1500
 
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
-AutoBoot:Fogoso
-# /\ Setting the value to "null" will make the loading screen loading forever.
 AppDataFolder:Taiyou/HOME/AppsData/
-IgnoreDriversParameters:False
-#DefaultSystemUIScreen:3
-DefaultOverlayLevel:2
+IgnoreDriversParameters:True
 
 # ---------- Pygame Options ---------- #
-SmoothScaleBackend:MMX 
+SmoothScaleBackend:MMX
 FastEvent:True
  
 ############################
