Added Throw Exception Option

--- a/Taiyou/Taiyou.config
+++ b/Taiyou/Taiyou.config
@@ -26,11 +26,12 @@ AudioBufferSize:1500
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
 IgnoreDriversParameters:True
+ThrowException:True
 
 # ---------- Pygame Options ---------- #
 SmoothScaleBackend:MMX
 FastEvent:True
- 
+
 ############################
 # -- SmoothScaleBackend -- #
 ############################
