--- a/Taiyou/Taiyou.config
+++ b/Taiyou/Taiyou.config
@@ -25,7 +25,7 @@ AudioBufferSize:1500
 
 # ---------- Misc Options ---------- #
 RunInFullScreen:False
-IgnoreDriversParameters:False
+IgnoreDriversParameters:True
 ThrowException:True
 
 # ---------- Pygame Options ---------- #
