New Update (see details)
Updated Paser, now it parsrs Function Code
Update Parser's Error Messages
Move some code from Global to Taiyou.Global
Added Instruction Minimal Arguments Size Code Revision (currently not working)

--- a/TaiyouScriptEngine.Desktop.csproj
+++ b/TaiyouScriptEngine.Desktop.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Taiyou\Command\OffsetInteger.cs" />
     <Compile Include="Taiyou\Command\SetVarValue.cs" />
     <Compile Include="Taiyou\Command\JumpToFunctionIfEqual.cs" />
+    <Compile Include="Taiyou\Global.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
